fixed spacing

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -56,9 +56,10 @@ body {
   .sub-menu{
     width: 100%;
     height: 42px;
-    padding-left: 10px;
+    padding: 0px;
+    margin-left: 0px;
     padding-top:5px;
-    padding-right: 10px;
+    padding: 0px;
     .mixin-bg-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0) );
     background-color: darken(@grey,20%);
     border-bottom: solid 1px darken(@grey, 10%);
@@ -77,6 +78,7 @@ body {
     }
   }
   .navbar-search{
+    padding-top: 3px;
     .nudge{
       margin-left: 10px;
     }
